--- a/src/sections/Header/header.css
+++ b/src/sections/Header/header.css
@@ -70,14 +70,9 @@
 
 /* buttons */
 .header__cta a {
-    min-width: 145px;
-    text-align: center;
-    transition: var(--transition);
+    /* text-align: center;
+    width: 165px; */
     /* align-items: center; */
-}
-
-.header__cta a:hover {
-    min-width: 145px;
 }
 
 /* bio portion */
@@ -101,7 +96,7 @@
     bottom: 1.5rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.2rem;
 }
 
 .header__socials a {
@@ -148,7 +143,9 @@
 
 @media screen and (max-width: 1024px) {
     .header__class {
-        height: 100vh;
+        height: 110vh;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 
     /* #light .header__container{
@@ -185,6 +182,8 @@
 @media screen and (max-width: 680px) {
     .header__class {
         height: 120vh;
+        padding-left: 0rem;
+        padding-right: 0rem;
     }
     
     .header__profile {
@@ -196,10 +195,6 @@
         width: 100%;
     }
 
-    .header__cta {
-        gap: 1rem;
-    }
-
     .header__socials {
         position: relative;
         bottom: 0;
@@ -208,7 +203,7 @@
         padding-top: 2rem;
         gap: 1.2rem;
         width: 100%;
-        justify-content: flex-start;
+        justify-content: center;
     }
     #light .header__socials a:hover  {
         transform: translateY(-0.5rem);
